@@ -15,7 +15,6 @@ ToDo:
 	  sops->write_inode(), i.e. ntfs_write_inode(), will copy the times
 	  when it is invoked rather than having to update the mft record
 	  every time.
-	- Implement sops->write_inode().
 	- In between ntfs_prepare/commit_write, need exclusion between
 	  simultaneous file extensions. Need perhaps an NInoResizeUnderway()
 	  flag which we can set in ntfs_prepare_write() and clear again in
@@ -47,6 +46,16 @@ ToDo:
 	- Implement ->write_inode (fs/ntfs/inode.c::ntfs_write_inode()) for the
 	  ntfs super operations.  This gives us inode writing via the VFS inode
 	  dirty code paths.  Note:  Access time updates are not implemented yet.
+	- Implement fs/ntfs/mft.[hc]::{,__}mark_mft_record_dirty() and make
+	  fs/ntfs/aops.c::ntfs_writepage() and ntfs_commit_write() use it, thus
+	  finally enabling resident file overwrite!  (-8  This also includes a
+	  placeholder for ->writepage (ntfs_mft_writepage()), which for now
+	  just redirties the page and returns.  Also, at umount time, we for
+	  now throw away all mft data page cache pages after the last call to
+	  ntfs_commit_inode() in the hope that all inodes will have been
+	  written out by then and hence no dirty (meta)data will be lost.  We
+	  also check for this case and emit an error message telling the user
+	  to run chkdsk.
 
 2.1.12 - Fix the second fix to the decompression engine and some cleanups.
 
